# GameCPP

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Room.cpp  Room.h  main.cpp
resources/: map2.txt  map3.txt
